# edea-ms

./: .gitignore  .gitlab-ci.yml  .pyre_configuration  CHANGELOG.md  README.md  default.nix  flake.nix  package-lock.json  package.json  playwright.config.ts  pyproject.toml  svelte.config.js  tailwind.config.cjs  vite.config.ts
app/: __main__.py  condition.py  main.py  test_main.py
app/alembic/: env.py
app/alembic/versions/: 3e593fe27d13_initial_changes.py  e30150fb8f7a_define_measurement_column_with_project_.py
app/core/: auth.py  authz.py  helpers.py  staticfiles.py
app/db/: __init__.py  models.py  queries.py
app/routers/: config.py  export.py  files.py  forcing_condition.py  jobs.py  measurement_columns.py  measurement_entries.py  projects.py  specifications.py  testruns.py  ui.py  users.py
app/test/: conftest.py  test_main.py  test_measurement_flow.py  test_projects.py  test_specifications.py  test_sysconf.py  test_testruns.py
app/tests/: conftest.py  test_measurement_flow.py
doc/src/: SUMMARY.md  user_workflow.md
docs/: database.dbml
edea_ms/: main.py
edea_ms/db/: models.py
src/: app.html  theme.postcss
src/lib/: helpers.ts  schemas.ts
src/lib/modals/: ProjectForm.svelte  SpecificationForm.svelte
src/lib/models/: models.ts
src/lib/navigation/: Navigation.svelte
src/lib/svelte-vega/: LICENSE  README.md  index.ts
src/lib/tables/: SimpleTable.svelte  types.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/chart_editor/[id]/: +page.svelte
src/routes/project/[slug]/: +page.server.ts  +page.svelte  +page.ts  actions.svelte  store.ts
src/routes/project/compare/: +page.svelte  +page.ts
src/routes/projects/: +page.server.ts  +page.svelte  +page.ts  actions.svelte  detail_link.svelte  store.ts
src/routes/testrun/[id]/: +page.svelte  +page.ts
src/routes/testrun/[short_code]/: +page.svelte  +page.ts
src/routes/testruns/: +page.svelte  +page.ts
static/: index.html
templates/: table.html
