[tool.poetry]
name = "edea_ms"
version = "0.1.0"
description = "EDeA Measurement Server"
authors = ["Elen Eisendle <ln@calcifer.ee>"]
license = "EUPLv1.2"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.20" }
uvicorn = { extras = ["standard"], version = "^0.23.2" }
aiosqlite = "^0.19.0"
httpx = "^0.24.1"
alembic = "^1.11.3"
aiofiles = "^23.2.1"
cython = { version = "^3.0.2", optional = true }
polars = "^0.18.15"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"
cryptography = "^41.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
trio = "^0.22.2"
mypy = "^1.5.1"
pytest-alembic = "^0.10.7"
sqlalchemy = { version = "^2.0.20", extras = ["mypy"] }
sourcery-cli = { version = "^1.8.0", optional = true }
black = { version = "^23.7.0" }
edea-tmc = { git = "https://gitlab.com/edea-dev/edea-tmc.git", branch = "main" }
pytest-asyncio = "^0.21.1"
numpy = "^1.25.2"
pydantic = "^2.3.0"

[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
yappi = "^1.4.0"
py-spy = "^0.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
line-length = 120
